Table users {
  id integer [primary key, increment]
  email varchar [not null, unique]
  login varchar
  name varchar
  birthday date [not null]
}

Table films {
  id integer [primary key, increment]
  name varchar [not null]
  description varchar [not null]
  release_date date [not null]
  duration integer [not null]
  mpa_id integer [not null]
}

Table mpa_rating {
  id integer [primary key]
  name varchar [not null, unique]
}

Table genres {
  id integer [primary key]
  name varchar [not null]
}

Table film_genres {
  film_id integer
  genre_id integer
  primary key (film_id, genre_id)
}

Table likes {
  film_id integer
  user_id integer
  primary key (film_id, user_id)
}

Table friendships {
  user_id integer
  friend_id integer
  status varchar
  primary key (user_id, friend_id)
}

Ref: mpa_rating.id < films.mpa_id
Ref: films.id < film_genres.film_id
Ref: genres.id < film_genres.genre_id
Ref: likes.film_id < films.id
Ref: likes.user_id < users.id
Ref: friendships.user_id < users.id
